# ros2_explore

./: .clang-format  README.md
install/: local_setup.sh  setup.sh
install/ros2_base/include/ros2_base/ros2_base/action/: count_number.hpp
install/ros2_base/include/ros2_base/ros2_base/action/detail/: count_number__functions.c  count_number__functions.h  count_number__rosidl_typesupport_fastrtps_c.h  count_number__rosidl_typesupport_introspection_c.h  count_number__rosidl_typesupport_introspection_cpp.hpp  count_number__struct.h  count_number__type_support.cpp  count_number__type_support.h  count_number__type_support.hpp
install/ros2_base/include/ros2_base/ros2_base/msg/: rosidl_typesupport_fastrtps_c__visibility_control.h
install/ros2_base/lib/ros2_base/: action_client  action_server  client  service  topic_pub  topic_sub
install/ros2_base/local/lib/python3.10/dist-packages/ros2_base/: _ros2_base_s.ep.rosidl_typesupport_c.c  _ros2_base_s.ep.rosidl_typesupport_introspection_c.c
install/ros2_base/local/lib/python3.10/dist-packages/ros2_base-0.0.0-py3.10.egg-info/: PKG-INFO  top_level.txt
install/ros2_base/local/lib/python3.10/dist-packages/ros2_base/action/: _count_number_s.c
install/ros2_base/share/ament_index/resource_index/package_run_dependencies/: ros2_base
install/ros2_base/share/ament_index/resource_index/parent_prefix_path/: ros2_base
install/ros2_base/share/ament_index/resource_index/rosidl_interfaces/: ros2_base
install/ros2_base/share/ros2_base/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros2_base/share/ros2_base/action/: CountNumber.action  CountNumber.idl
install/ros2_base/share/ros2_base/cmake/: ament_cmake_export_libraries-extras.cmake  export_ros2_base__rosidl_generator_cExport-noconfig.cmake  export_ros2_base__rosidl_generator_pyExport-noconfig.cmake  export_ros2_base__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_ros2_base__rosidl_typesupport_fastrtps_cExport.cmake  export_ros2_base__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  ros2_base__rosidl_typesupport_cppExport-noconfig.cmake  ros2_base__rosidl_typesupport_introspection_cExport.cmake  ros2_base__rosidl_typesupport_introspection_cppExport.cmake
install/ros2_base/share/ros2_base/launch/: config_launch.py  generate_launch.py
log/: latest_build
src/ros2_base/: CMakeLists.txt
src/ros2_base/config/: test.yaml
src/ros2_base/launch/: config_launch.py
src/ros2_base/src/: action_client.cpp  action_server.cpp  client.cpp  service.cpp  topic_pub.cpp  topic_sub.cpp
